# cpp_features_playground

./: .gitignore  .gitmodules  CMakeLists.txt  clang-uml.yml  compile_commands.json  format_preprocessor.py  format_preprocessor.sh  start.sh  test.puml
_inc/: __example__.hpp  adding_iterators_and_hash_to_custom_struct.hpp  boost_serialization.hpp  c++20.hpp  dynamic_vs_static_polimorphism.hpp  dynamic_vs_static_polymorphism.hpp  gnu_plot.hpp  iterators.hpp  likely_unlikely.hpp  likely_unlikely_changed.hpp  progress_bar.hpp  ram_access.hpp  singleton.hpp  span.hpp  std_move.hpp  tipping_buffer.hpp  vector_custom_allocator_and_overloaded_global_new_and_delete.hpp  xor_linked_list.hpp
_inc/c++20/: __example__.hpp  range_for_loop_decignated_initialization.hpp
_inc/other/: boost_serialization.hpp  factorization.hpp  likely_unlikely.hpp  preprocessor_substitution_example.hpp  progress_bar.hpp  ram_access.hpp  scoped_pop.hpp  tipping_buffer.hpp  xor_linked_list.hpp
_src/: main.cpp
_test/: many_test_concepts.cpp  test.cpp
scripts/: production.sh  run.sh
